Cancel Overview first when activation changes

* WindowSelectorObserver listens the activation change first so that
  it can cancel the overview before resuming minimized window.
* This also fixes a crash that happens if you click the overview button
 while activating a window in overview.
* This also fixes the bug in WindowSelectorController was calling wrong
  "Starting/EndingAnimation". This happens to work fine
  because the end results are the same.

Bug: 905813
Test: covered by unit test. WindowSelectorControllerTest::AnimationCallbacks
Change-Id: I2b3d3fdc2e68bb41c0d037d46552cf6cfda98746
Reviewed-on: https://chromium-review.googlesource.com/c/1338175
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608930}
Former-commit-id: e6c35095475736406221d8fb47f5119be4bfd508